--- a/public/index.html
+++ b/public/index.html
@@ -3,15 +3,23 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Cold</title>
+        <title>Static Index</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" 
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    </head>
-
-    <body>
-        <h1>Hello, world!</h1>
+        <link rel="stylesheet" href="style.css">
         
+    </head>
+    <h1>Static Index</h1>
+    <body class="bg-dark text-white mt-3">
+        <div class="container">
+            <p>You wake in the middle of the night. You hear something downstairs. </p>
+            <div class="input-group mb-3">
+                <input type="text" class="form-control bg-dark text-white" id="user-input">
+              </div>
+        </div>
+
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" 
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+        <script src="./app.js"></script>
     </body>
 </html>
